Closed Bug 732598 Opened 12 years ago Closed 12 years ago

WebGL no longer works on Samsung Galaxy Tab 8.9

Categories

(Core :: Graphics, defect)

ARM
Android
defect
Not set
major

Tracking

()

RESOLVED FIXED
mozilla13

People

(Reporter: wgianopoulos, Assigned: mattwoodrow)

References

Details

(Keywords: regression)

Attachments

(1 file)

WebGL is not working on my Samsung Galaxy Tab 8.9 with mozilla-inbound builds.

So far have narrowed the reression range to:

https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=e485c2c74c4d&tochange=c30b6943dc98
Blocks: 700240
Component: General → Graphics
Product: Fennec → Core
QA Contact: general → thebes
Does this fix the issue for you?
Attachment #602522 - Flags: review?(bjacob)
Comment on attachment 602522 [details] [diff] [review]
Optionally load glGetTexLevelParameteriv

Review of attachment 602522 [details] [diff] [review]:
-----------------------------------------------------------------

Indeed, glGetTexLevelParameter doesn't exist in ES, so this change presumably broke all strict ES implementations.

r=me but please give this a thought:

::: gfx/gl/GLContext.h
@@ +2136,5 @@
>  
>      void fGetTexLevelParameteriv(GLenum target, GLint level, GLenum pname, GLint *params)
>      {  
> +        if (!mSymbols.fGetTexLevelParameteriv) {
> +          *params = 0;

Unless there is a specific reason to default to 0 here, I would rather leave *params unchanged. That would be in line with the behavior of OpenGL getter functions when an error occurs. Although here, there is no OpenGL error and we don't currently have a good way of simulating one in release builds. (If needed we could still decide to make mGLError work also in release builds, with negligible overhead.)
Attachment #602522 - Flags: review?(bjacob) → review+
Ah no, scrap that, callers calling this with uninitialized *params would find it very surprising if it stayed uninitialized while no GL error occurred. My suggestion only makes sense if we decide to simulate a GL error here.
(In reply to Matt Woodrow (:mattwoodrow) from comment #2)
> Created attachment 602522 [details] [diff] [review]
> Optionally load glGetTexLevelParameteriv
> 
> Does this fix the issue for you?

Yes that works great!
http://hg.mozilla.org/integration/mozilla-inbound/rev/788912c80d97
Assignee: nobody → matt.woodrow
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla13
https://hg.mozilla.org/mozilla-central/rev/788912c80d97
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: