Bug 732598 - Optionally load glGetTexLevelParameteriv - r=bjacob